[package]
name = "ksz8863"
version = "0.1.1"
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
description = "A driver for the KSZ8863 Ethernet Switch."
keywords = ["ethernet", "switch", "phy", "smi", "miim"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/ksz8863.git"
homepage = "https://github.com/mitchmindtree/ksz8863"
edition = "2018"

[dependencies]
bitvec = { version = "0.20.0", default-features = false }
hash32 = { version = "0.1.1", optional = true }
hash32-derive = { version = "0.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
ufmt = { version = "0.1", optional = true }

[features]
hash-32 = ["hash32", "hash32-derive"]

[package.metadata.docs.rs]
all-features = true
